--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 	</head>
 	<body>
 		<h3>Progect Emergent.</h3>
+		<p> Github repo: <a href="https://github.com/averrin/emergent">git@github.com:averrin/emergent.git</a>
 	</body>
 </html>
