Backdrop picture & some CSS for the landing page

--- a/index.html
+++ b/index.html
@@ -1,8 +1,14 @@
+<!DOCTYPE html>
 <html>
-	<head>
-	</head>
-	<body>
-		<h3>Progect Emergent.</h3>
-		<p> Github repo: <a href="https://github.com/averrin/emergent">git@github.com:averrin/emergent.git</a>
-	</body>
+    <head>
+        <meta charset="utf-8">
+        <title>Project Emergent</title>
+        <link rel="stylesheet" href="/media/start.css">
+    </head>
+    <body>
+        <div class="titlebar">
+            <h1>Project Emergent</h1>
+            <p>GitHub repo: <a href="https://github.com/averrin/emergent">git@github.com:averrin/emergent.git</a>
+        </div>
+    </body>
 </html>
