--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
             <h1>Project Emergent</h1>
             <p>GitHub repo: <a href="https://github.com/averrin/emergent">git@github.com:averrin/emergent.git</a><iframe src="http://ghbtns.com/github-btn.html?user=averrin&repo=emergent&type=fork"
   allowtransparency="true" frameborder="0" scrolling="0" width="53" height="20" class="gh-button"></iframe>
+            </p>
+        </div>
+        <div class="description">
+            <p>
+                Суть проекта такова: форкаете репозиторий, делаете все что угодно, делаете пулл-реквест.Я мержу, добавляю вас в контрибьюторы и продолжаем безумие. Предложения по серверной части приветствуются. И да, рассказывайте друзьям.
+            </p>
+            <p>
+                Пока предложения по серверу такие: Django, Node.js (например стэк MEAN - mongo, express.js, angular, node). Обсуждение: <a hgref="https://github.com/averrin/emergent/issues/3">ТУТ</a>
+            </p>
         </div>
     </body>
 </html>
