Fixed description on the main page.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 Суть проекта такова: форкаете репозиторий, делаете все что угодно, делаете пулл-реквест.Я мержу, добавляю вас в контрибьюторы и продолжаем безумие. Предложения по серверной части приветствуются. И да, рассказывайте друзьям.
             </p>
             <p>
-                Пока предложения по серверу такие: Django, Node.js (например стэк MEAN - mongo, express.js, angular, node). Обсуждение: <a hgref="https://github.com/averrin/emergent/issues/3">ТУТ</a>
+                Пока предложения по серверу такие: Django, Node.js (например стэк MEAN - mongo, express.js, angular, node). Обсуждение: <a href="https://github.com/averrin/emergent/issues/3">ТУТ</a>
             </p>
         </div>
     </body>
